# kerio-connect-reindex

./: Cargo.toml  README.md  kerio-connect-reindex.8  kerio-connect-reindex.service  kerio-connect-reindex.timer
.github/workflows/: release.yml
debian/: postinst  prerm
kerio-connect-reindex/: Cargo.toml
kerio-connect-reindex/src/: main.rs
