[package]
name = "kerio-connect-reindex"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0" 
description = "Utility to safely reindex Kerio Connect corrupted index and search files in parallel, and restart the service."

[dependencies]
rayon = "1.8"
walkdir = "2.4"

[package.metadata.deb]
maintainer = "opentree.cz <package@opentree.cz>"
copyright = "2026"
section = "utility"
priority = "optional"
# cargo-deb requires we use the generic "target/release/" prefix. 
# It will automatically swap in the correct cross-compile target path during the build.
assets = [
    ["target/release/kerio-connect-reindex", "usr/local/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/kerio-connect-reindex", dest = "/usr/local/bin/kerio-connect-reindex", mode = "755" }
]